app/assets/stylesheets/bootstrapcustom.css.scss
@import "bootstrap";
@import url(https://fonts.googleapis.com/css?family=Londrina+Solid);
@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,600);
@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800);
@import url(https://fonts.googleapis.com/css?family=Droid+Sans:400,700);

.navbar-light .navbar-brand {
	color: #F5F5F5; 
	font-family: 'Londrina Solid', cursive;
	font-size: 2.1em;
	letter-spacing: 1.5px; 
	border-color: #F5F5F5;
	border-style: solid;
	border-width: 3px;
	padding: 5px;
	padding-left: 13px;
	padding-right: 13px;
	border-radius: 12px;
	box-shadow: .5px .5px 1px;
}

.navbar-light .navbar-brand2 {
	color: #F5F5F5; 
	font-family: 'Londrina Solid', cursive;
	font-size: 1.6em;
	letter-spacing: 1.5px; 
	padding-left: 13px;
	padding-right: 13px;
	margin-top: 12px;
	border: white 2px solid;
	border-radius: 12px;
	margin-right: 10px;
}

.navbar-light .navbar-brand2:hover {
	color: #E4491C;
	border-color: #E4491C;
}

.navbar-light .navbar-brand:hover {
	color: #a3daff; 
	border-color: #a3daff;

}

.navbar-light a {
	color: white; 
	font-weight: bold; 
}

.navbar-light a:hover {
	text-decoration: none;
}

.wideform {
	height: 100px;
	width: 100%;
	background-color: red; 
}

/* Navbar */

#toptext {
	font-size: 18px;
	text-align: center;
	padding-top: 1px;
	margin-bottom: 3px;
	color: white;
	font-family: 'Open Sans', sans-serif;
	font-weight: bold;
}

.navlink {
	font-size: 2.3em;
	letter-spacing: 1.5px;
	font-family: 'Londrina Solid', cursive;
	text-decoration: underline;
	text-decoration-line: 2px;
}

.navlink:hover {
	color: #E4491C;
}

/* post markup */

#title {
	font-family: 'Londrina Solid', cursive;
	font-size: 2.4em;
	letter-spacing: 1.3px;

}

#paragraph p {
	font-family: 'Droid Sans', sans-serif;
	font-size: 1.02em;
}

/* post view */ 

#category {
	border: 2px solid #0387B1;
	background-color: #0387B1;
	display: table-cell;
	padding: 5px;
	padding-left: 10px;
	padding-right: 10px;
	border-radius: 5px;
	color: #F5F5F5;
	font-weight: bold;
}

#category:hover {
	color: white;
}


/* hex test /*/

#hexGrid {
    overflow: hidden;
    width: 100%;
    margin: 0 auto;
    padding:0.866% 0;
    font-family: 'Raleway', sans-serif;
    font-size: 15px;
}
#hexGrid:after {
    content: "";
    display: block;
    clear: both;
}
.hex {
    position: relative;
    list-style-type: none;
    float: left;
    overflow: hidden;
    visibility: hidden;
    outline:1px solid transparent; /* fix for jagged edges in FF on hover transition */
    -webkit-transform: rotate(-60deg) skewY(30deg) translatez(-1px);
        -ms-transform: rotate(-60deg) skewY(30deg) translatez(-1px);
            transform: rotate(-60deg) skewY(30deg) translatez(-1px);
}
.hex * {
    position: absolute;
    visibility: visible;
    outline:1px solid transparent; /* fix for jagged edges in FF on hover transition */
}
.hexIn {
    display:block;
    width: 100%;
    height: 100%;
    text-align: center;
    color: #fff;
    overflow: hidden;
    -webkit-transform: skewY(-30deg) rotate(60deg);
        -ms-transform: skewY(-30deg) rotate(60deg);
            transform: skewY(-30deg) rotate(60deg);
}

/*** HEX CONTENT **********************************************************************/
.hex img {
    left: -100%;
    right: -100%;
    width: auto;
    height: 100%;
    margin: 0 auto;
}

.hex h1, .hex p {
    width: 102%;
    left:-1%; /* prevent line on the right where background doesn't cover image */
    padding: 1%;
    color: white;
    box-sizing:border-box;
    background-color: #31364d;
    font-weight: 300;
    -webkit-transition:  -webkit-transform .2s ease-out, opacity .3s ease-out;
            transition:          transform .2s ease-out, opacity .3s ease-out;
}

.hex h1, .hex p {
  margin: 0;
}

.hex h1 {
    bottom: 50%;
    padding-top:50%;
    font-size: 1.5em;
    z-index: 1;
    -webkit-transform:translateY(-100%) translatez(-1px);
        -ms-transform:translateY(-100%) translatez(-1px);
            transform:translateY(-100%) translatez(-1px);
}
.hex h1:after {
    content: '';
    position: absolute;
    bottom: 0;
    left: 45%;
    width: 10%;
    text-align: center;
    border-bottom: 1px solid #fff;
}
.hex p {
    top: 50%;
    padding-bottom:50%;
    -webkit-transform:translateY(100%) translatez(-1px);
        -ms-transform:translateY(100%) translatez(-1px);
            transform:translateY(100%) translatez(-1px);
}


/*** HOVER EFFECT  **********************************************************************/
.hexIn:hover h1, .hexIn:focus h1,
.hexIn:hover p, .hexIn:focus p{
    -webkit-transform:translateY(0%) translatez(-1px);
        -ms-transform:translateY(0%) translatez(-1px);
            transform:translateY(0%) translatez(-1px);
}

/*** SPACING AND SIZING *****************************************************************/
@media (min-width:601px) { /* <- 3-2  hexagons per row */
    .hex {
        width: 32.666%; /* = (100-2) / 3 */
        padding-bottom: 37.720%; /* =  width / sin(60) */
    }
    .hex:nth-child(5n+4),
    .hex:nth-child(5n+5) {
        margin-top: -8.564%;
        margin-bottom: -8.564%;
        -webkit-transform: translateX(50%) rotate(-60deg) skewY(30deg);
            -ms-transform: translateX(50%) rotate(-60deg) skewY(30deg);
                transform: translateX(50%) rotate(-60deg) skewY(30deg);
    }
    .hex:nth-child(5n+4):last-child,
    .hex:nth-child(5n+5):last-child {
        margin-bottom: 0;
    }
    .hex:nth-child(5n+4) {
        margin-right: 1%;
        margin-left: 0.5%;
    }
    .hex:nth-child(5n+2) {
        margin-left: 1%;
        margin-right: 1%;
    }
    .hex:nth-child(5n+6) {
        clear: left;
    }
}
@media (max-width: 600px) { /* <- 2-1  hexagons per row */
    .hex {
        width: 49.5%; /* = (100-1) / 2 */
        padding-bottom: 57.158%; /* =  width / sin(60) */
    }
    .hex:nth-child(3n+3) {
        margin-top: -13.423%;
        margin-bottom: -13.423%;
        -webkit-transform: translateX(50%) rotate(-60deg) skewY(30deg);
            -ms-transform: translateX(50%) rotate(-60deg) skewY(30deg);
                transform: translateX(50%) rotate(-60deg) skewY(30deg);
    }
    .hex:nth-child(3n+3):last-child {
        margin-bottom: 0;
    }
    .hex:nth-child(3n+3) {
        margin-left: 0.5%;
    }
    .hex:nth-child(3n+2) {
        margin-left: 1%;
    }
    .hex:nth-child(3n+4) {
        clear: left;
    }
}
@media (max-width: 400px) {
    #hexGrid {
        font-size: 13px;
    }
}

